crates/aerro/tests/ui/fail/missing_code.rs
use aerro;

#[derive(aerro::Aerro)]
pub enum E {
    #[aerro(category = Business)]
    NoCode,
}

fn main() {}
